feat: added method to create a new file cache
