# src/routes/index.ts
@@ -1,16 +1,20 @@
 import express, { Request, Response } from 'express'
 import { UploadController, QueriesController } from '../constrollers/index'
+import IFile from '../types/file'
 
 const upload = require('../helpers/upload')
 const app = express()
 
 app.get('/upload', upload.single('file'), async (req: any, res: Response) => {
     try {
+        const file: any = req.file
+        console.log(file)
+        if(file.mimetype != 'text/plain') throw {status: 400, error: {message: `Invalid ${file.originalname} file type ${file.mimetype}, expected 'text/plain' type`}}
         const uploadControllerInstance = new UploadController()
         await uploadControllerInstance.onCreate(req.file)
         res.status(201).json({message: 'clients file was sucessfully uploaded', file: req.file})
-    }catch(err) {
-        res.status(500).json({error: `Upload failed error ${err}`})
+    }catch(err: any) {
+        res.status(err.status).json(err.error)
     }
 })
 
